Enable scheduled checks

--- a/.github/workflows/scheduled-check.yaml
+++ b/.github/workflows/scheduled-check.yaml
@@ -1,9 +1,8 @@
-name: "Scheduled checks" # Note that this name appears in the README's badge
+name: "Scheduled checks"
 on:
   push:
-  # TEMPORARILY DISABLED
-  # schedule:
-  #   - cron: "32 2,14 * * *"  # 02:32 UTC and 14:32 every day
+  schedule:
+    - cron: "32 2,14 * * *" # 02:32 UTC and 14:32 every day
 
 env:
   # TODO: flip this to the production DSN once we're done testing
