--- a/requirements.in
+++ b/requirements.in
@@ -1,3 +1,4 @@
+# main reqs
 beautifulsoup4==4.10.0
 click==8.0.3
 html5lib==1.1
@@ -6,3 +7,7 @@ PyYAML==6.0
 requests==2.27.1
 sentry-sdk==1.5.4
 slack_sdk==3.14.1
+
+# test reqs
+pytest==7.0.1
+pytest-cov==3.0.0
