--- a/data/allowlist.yaml
+++ b/data/allowlist.yaml
@@ -350,6 +350,7 @@ bedrock_base_config: &bedrock_base_config
     # Mozilla social accounts
     - https://www.instagram.com/firefox/
     - https://www.instagram.com/mozilla/
+    - https://www.instagram.com/mozilla_deutschland/
     - https://www.instagram.com/unfcktheinternet/
 
     # Specific YouTube links
@@ -401,6 +402,8 @@ bedrock_base_config: &bedrock_base_config
     # Malformatted or broken links which need fixing
     - firefox-third-party.html # This is a 404 and we'll probably leave it as such for now
     - (https://github.com/mozilla/spoke/blob/master/LICENSE)
+    - libro  # in /ia/ locale
+    - fluent  # in /ia/ locale
 
     # Exceptions allowed as Fluent string overrides
     - https://mozlinks.moztw.org/2014/04/poster.html
