--- a/.github/workflows/scheduled-check.yaml
+++ b/.github/workflows/scheduled-check.yaml
@@ -18,6 +18,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
       - name: Install requirements
         run: pip install -r requirements.txt
       - name: Run checker
@@ -40,6 +42,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
       - name: Install requirements
         run: pip install -r requirements.txt
       - name: Run checker
@@ -63,6 +67,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
       - name: Install requirements
         run: pip install -r requirements.txt
       - name: Run checker
@@ -86,6 +92,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
       - name: Install requirements
         run: pip install -r requirements.txt
       - name: Download artifacts, if they exist
