--- a/requirements.in
+++ b/requirements.in
@@ -3,7 +3,7 @@ beautifulsoup4==4.10.0
 click==8.0.3
 html5lib==1.1
 lxml==4.9.1
-PyYAML==6.0
+pyaml-env==1.2.0
 requests==2.27.1
 sentry-sdk==1.5.4
 slack_sdk==3.14.1
